--- a/_posts/2019-08-04-San-Fran.md
+++ b/_posts/2019-08-04-San-Fran.md
@@ -26,7 +26,7 @@ options(warn=-1)
    
 
 
-![png](output_8_1.png)
+![png](/img/output_8_1.png)
 
 
 
@@ -85,7 +85,7 @@ ggplot(data = data,aes(x=DayOfWeek, y=count,fill = Category)) +
 
 
 
-![png](output_11_1.png)
+![png](/img/output_11_1.png)
 
 
 
@@ -108,7 +108,7 @@ ggplot(data = data,aes(x=Year, y=count,fill = Category)) +
 
 
 
-![png](output_12_1.png)
+![png](/img/output_12_1.png)
 
 
 
@@ -128,7 +128,7 @@ ggplot(data = data, aes(x = Resolution, y = count, fill = Resolution)) +
 
 
 
-![png](output_13_1.png)
+![png](/img/output_13_1.png)
 
 
 
@@ -170,7 +170,7 @@ ggplot(data = data, aes(x = Address, y = count)) +
 
 
 
-![png](output_15_1.png)
+![png](/img/output_15_1.png)
 
 
     Call:
